--- a/src/components/category/categories.css
+++ b/src/components/category/categories.css
@@ -1,11 +1,11 @@
 .card-container {
+  margin-left: 10%; /* Space for sidebar */
+  width: 70%;
+  top: 60px;
+  bottom: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin-right: 0;
-  width: 80%;
-  margin-left: 20%;
-  margin-top: 60px;
+  height: 100%; /* Ensure it takes up full height */
 
 }
 table {
@@ -40,7 +40,7 @@ tr:hover {
 }
 
 .p-4 {
-  padding: 16px;
+  padding: 6px;
 }
 
 
